change to post method and add doc for flight
