# routes/flight.js
@@ -2,6 +2,6 @@ const router = require("express").Router();
 const flight = require("../controllers/flight");
 
 router.get("/schedule", flight.showFlight);
-router.get("/schedule/search", flight.showFilter);
+router.post("/schedule/search", flight.showFilter);
 
 module.exports = router;
